# using-hydra-tutorial

./: README.md
hydra-proj/: pyproject.toml
hydra-proj/outputs/: experiment_index.csv
hydra-proj/outputs/m1_d3/: multirun.yaml
hydra-proj/outputs/m1_d3/job_0_lr_2e-05_ep_1/: experiment_info.json  full_config.yaml
hydra-proj/outputs/m1_d3/job_0_lr_2e-05_ep_1/.hydra/: hydra.yaml  overrides.yaml
hydra-proj/outputs/m1_d3/job_1_lr_2e-06_ep_1/: experiment_info.json  full_config.yaml
hydra-proj/outputs/m1_d3/job_1_lr_2e-06_ep_1/.hydra/: hydra.yaml  overrides.yaml
hydra-proj/outputs/m1_d3/job_2_lr_2e-07_ep_1/: experiment_info.json
hydra-proj/outputs/m1_d3/job_2_lr_2e-07_ep_1/.hydra/: config.yaml  hydra.yaml  overrides.yaml
hydra-proj/outputs/m2_d3/: experiment_info.json
hydra-proj/outputs/m2_d3/.hydra/: config.yaml  hydra.yaml  overrides.yaml
hydra-proj/src/: experiment_tracker.py  main.py
hydra-proj/src/config/: default_config.yaml
hydra-proj/src/config/dataset/: commit_plus_PR_qwen_32B.yaml
hydra-proj/src/config/hyperparam/: basic_config.yaml
hydra-proj/src/config/model/: codesage_v1.yaml  codesage_v2.yaml
